--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     padding: 0px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-*header{
+.header{
     background-color: #333;
     color: white;
     padding: 10px 0;
@@ -12,52 +12,67 @@
     display: flex;
     position: relative;
 }
-*header h1{
+.header h1{
     flex: 1;
     margin: 0;
     font-size: 2em;
 }
-*header nav{
+.header nav{
     flex: 1;
     text-align: right;
 }
-*header nav a{
+.header nav a{
     color: white;
     text-decoration: none;
     padding: 0 15px;
 }
-*header nav a:hover{
+.header nav a:hover{
     text-decoration: underline;
 }
-*header img{
+.header img{
     width: 50px;
     height: 50px;
     border-radius: 50%;
     margin-right: 20px;
 }
-*header .logo{
+.header .logo{
     width: 50px;
     height: 50px;
     border-radius: 50%;
     margin-right: 20px;
 }
-*header .logo img{
+.header .logo img{
     width: 100%;
     height: 100%;
     border-radius: 50%;
 }
-*header .logo h1{
+.header .logo h1{
     margin: 0;
     font-size: 1.5em;
 }
-*header .logo h1 span{
+.header .logo h1 span{
     color: #ff6347; /* Tomato color for emphasis */
 }
-*header .logo h1 span::before{
+.header .logo h1 span::before{
     content: "Cafe ";
 }
-*header .logo h1 span::after{
+.header .logo h1 span::after{
     content: " Bistro";
 }
-*header .logo h1 span::before,
-
+.header .logo h1 span::after{
+    font-weight: normal;
+    color: #fff;
+}
+.nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-list{
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
