--- a/style.css
+++ b/style.css
@@ -166,8 +166,8 @@
     flex-wrap: wrap;
 }
 .about-image{
-    width: 300px;
-    height: 200px;
+    width: 330px;
+    height: 300px;
     border-radius: 10px;
     object-fit: cover;
     margin-right: 20px;
@@ -193,3 +193,91 @@
 
 
 /* Services section styles */
+.service-container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 20px;
+}
+.service-item{
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 20px;
+    max-width: 300px;
+    text-align: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+    width: 300px;
+    height: 250;
+}
+.service-item:hover{
+    transform: scale(1.05);
+}
+.service-item h3{
+    font-size: 1.5em;
+    color: #333;
+    margin-bottom: 10px;
+}
+.service-item p{
+    font-size: 1em;
+    color: #666;
+}
+.service-item img{
+    width: 100%;
+    height: 300px;
+    border-radius: 10px;
+    object-fit: cover;
+}
+
+/* product section styles */
+.product-container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 20px;
+}
+.product-item{
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 20px;
+    max-width: 300px;
+    text-align: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+}
+.product-item:hover{
+    transform: scale(1.05);
+}
+.product-item img{
+    width: 100%;
+    height: 200px;
+    border-radius: 10px;
+    object-fit: cover;
+}
+.product-item h3{
+    font-size: 1.5em;
+    color: #333;
+    margin-bottom: 10px;
+}
+.product-item p{
+    font-size: 1em;
+    color: #666;
+}
+.product-btn{
+    background-color: #ff6347; /* Tomato color */
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 1em;
+    border-radius: 5px;
+    transition: background-color 0.3s, transform 0.3s;
+}
+.product-btn:hover{
+    background-color: #e55347; /* Darker shade on hover */
+    transform: scale(1.05);
+}
