--- a/style.css
+++ b/style.css
@@ -396,3 +396,46 @@
     border-radius: 5px;
     transition: background-color 0.3s, transform 0.3s;
 }
+
+
+.featured-btn:hover{
+    background-color: #e55347; /* Darker shade on hover */
+    transform: scale(1.05);
+}
+
+/* Special Events section styles */
+.event-container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 20px;
+}
+.event-item{
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 20px;
+    max-width: 300px;
+    text-align: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+}
+.event-item:hover{
+    transform: scale(1.05);
+}
+.event-item img{
+    width: 100%;
+    height: 200px;
+    border-radius: 10px;
+    object-fit: cover;
+}
+.event-item h3{
+    font-size: 1.5em;
+    color: #333;
+    margin-bottom: 10px;
+}
+.event-item p{
+    font-size: 1em;
+    color: #666;
+}
