--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     padding: 10px 0;
     text-align: center;
     display: flex;
-    position: relative;
+    width: 100%;
 }
 .header h1{
     flex: 1;
@@ -29,12 +29,8 @@
 .header nav a:hover{
     text-decoration: underline;
 }
-.header img{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 20px;
-}
+
+
 .header .logo{
     width: 50px;
     height: 50px;
@@ -96,6 +92,19 @@
 
 
 /* home page stylles*/
+.hero{
+    background-image: url('photos/Light bulb.jpg');
+    background-size: cover;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: rgb(12, 12, 12);
+    text-align: center;
+    padding: 20px;
+    display: flex;
+    
+}
 .pp1{
     font-size: 2.5em;
     color: #333;
@@ -140,11 +149,11 @@
     border-radius: 10px;
     padding: 20px;
     text-align: center;
-    margin: 20px auto;
-    max-width: 600px;
+    max-width: 500px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-wrap: wrap;
+    margin:10px ;
 }
 .pp3{
     font-size: 1.5em;
@@ -323,7 +332,7 @@
     text-align: center;
     padding: 100px;
     margin: 20px;
-    max-width: 300px;
+    width: 100%;
 }
 .offer-item h3{
     font-size: 1.5em;
