--- a/style.css
+++ b/style.css
@@ -518,7 +518,6 @@
     text-align: center;
 }
 .locaions{
-    flex: 1;
     max-width: 400px;
     margin-right: 20px;
     box-sizing: border-box;
@@ -532,4 +531,59 @@
     color: #333;
     margin-bottom: 10px;
 }
+.locaions p{
+    font-size: 1em;
+    color: #666;
+    margin-bottom: 10px;
+}
+.contact-form{
+    max-width: 400px;
+    box-sizing: border-box;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow:0 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+.contact-form h3{
+    font-size: 1.5em;
+    color: #333;
+    margin-bottom: 10px;
+}
+.contact-form input, .contact-form textarea{
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    text-align: left;
+    gap: 10px;
+    margin: 10px 0;
+}
+.contact-form input[type="submit"]{
+    background-color: #ff6347; /* Tomato color */
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 1em;
+    transition: background-color 0.3s, transform 0.3s;
+}
+.contact-form input[type="submit"]:hover{
+    background-color: #e55347; /* Darker shade on hover */
+    transform: scale(1.05);
+}
+.submit-btn{
+    background-color: #ff6347; /* Tomato color */
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 1em;
+    border-radius: 5px;
+    transition: background-color 0.3s, transform 0.3s;
+}
+.submit-btn:hover{
+    background-color: #e55347; /* Darker shade on hover */
+    transform: scale(1.05);
+}
+
 
