--- a/style.css
+++ b/style.css
@@ -587,3 +587,91 @@
 }
 
 
+/* testmonies stsyles */
+.testimonial-container{
+ display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Creates columns that are at least 200px wide and flexible */
+  gap: 10px; /* Adds spacing between the grid items */
+
+}
+.testimonial-item{
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 20px;
+    max-width: 300px;
+    text-align: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+}
+.testimonial-item:hover{
+    transform: scale(1.05);
+}
+.testimonial-item img{
+    width: 100%;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.testimonial-item h3{
+    font-size: 1.5em;
+    color: #333;
+    margin-bottom: 10px;
+}
+.testimonial-item p{
+    font-size: 1em;
+    color: #666;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* blogs section styles */
+.blog-container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 20px;
+}
+.blog-item{
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 20px;
+    max-width: 300px;
+    text-align: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+}
+.blog-item:hover{
+    transform: scale(1.05);
+}
+.blog-item img{
+    width: 100%;
+    height: 200px;
+    border-radius: 10px;
+    object-fit: cover;
+}
+.blog-item h3{
+    font-size: 1.5em;
+    color: #333;
+    margin-bottom: 10px;
+}
+.blog-item p{
+    font-size: 1em;
+    color: #666;
+}
+
+
